@@ -11,6 +11,8 @@ git-annex (6.20160809) UNRELEASED; urgency=medium
     Fixes a reversion introduced in version 5.20150727.
   * Assistant, repair: Filter out git fsck lines about duplicate file
     entries in tree objects.
+  * get -J, sync --content -J: Download different files from different
+    remotes when the remotes have the same costs.
 
  -- Joey Hess <id@joeyh.name>  Mon, 05 Sep 2016 11:51:49 -0400
 
